# CheckMeIn

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  checkMeIn.py  development.conf  include.mk  production.conf  pyproject.toml
HTMLTemplates/: admin.mako  adminTeams.mako  admin_teams.mako  base.mako  certifications.mako  fixData.mako  fix_data.mako  links.mako  login.mako  report.mako  reports.mako  station.mako  team.mako  teamReport.mako  tracing.mako
data/: development.conf  production.conf
requirements/: README.md  base.txt  development.txt  freeze-original.txt  production.txt
src/: __init__.py  accounts.py  base_database.py  certifications.py  checkMeIn.py  cherrypy_SSE.py  config.py  customReports.py  custom_reports.py  devices.py  docs.py  engine.py  guests.py  logEvents.py  log_events.py  members.py  reports.py  settings.py  teams.py  tracing.py  unlocks.py  utils.py  visits.py  webAdminStation.py  webBase.py  webCertifications.py  webGuestStation.py  webMainStation.py  webProfile.py  webReports.py  webTeams.py  web_admin_station.py  web_base.py
tests/: CPtest.py  __init__.py  account_test.py  account_tests.py  admin_test.py  base_cp_test.py  base_test.py  base_tests.py  bulk_data.csv  certifications_test.py  config_test.py  conftest.py  custom_reports_test.py  devices_test.py  engine_test.py  guest_test.py  guests_test.py  log_events_test.py  members_test.py  misc_tests.py  profile_test.py  reports_test.py  sampleData.py  sample_data.py  station_test.py  team_test.py  teams_test.py  tracing_test.py  unlocks_test.py  utils_test.py  visits_test.py  (+9 more)
(+3 files in other folders)
